# Windows-Font-Changer

./: .gitignore  .pre-commit-config.yaml  LICENSE  QUICKSTART.md  README.md  build.bat  pyproject.toml  run.bat  setup.py
.github/workflows/: build.yml  ci.yml
tests/: __init__.py  test_font_manager.py  test_ui.py
windows_font_changer/: __init__.py  __main__.py  font_manager.py  ui.py
